MDEV-16760 CREATE OR REPLACE TABLE never updates statistical tables

If the command CREATE OR REPLACE TABLE really replaces a table then
it should remove all data on this table from all statistical tables.