sql/sql_table.cc
@@ -4762,6 +4762,10 @@ int create_table_impl(THD *thd,
     {
       if (create_info->options & HA_LEX_CREATE_REPLACE)
       {
+        LEX_STRING db_name= {(char *) db, strlen(db)};
+        LEX_STRING tab_name= {(char *) table_name, strlen(table_name)};
+        (void) delete_statistics_for_table(thd, &db_name, &tab_name);
+
         TABLE_LIST table_list;
         table_list.init_one_table(db, strlen(db), table_name,
                                   strlen(table_name), table_name,
